--- a/main.css
+++ b/main.css
@@ -100,6 +100,17 @@ main article {
     max-width: 340px;
     text-align: justify;
     margin: 20px;
+    vertical-align: top;
+}
+
+article button {
+    line-height: 25px;
+    font-size: 1.5em;
+}
+
+#list {
+    line-height: 25px;
+    font-size: 1.5em;
 }
 
 @media screen and (min-width: 768px) {
